# embassy-os-guess

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
src/: guesser.rs  lib.rs  sniffer.rs
