[package]
name = "embassy-os-guess"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3.5", optional = true }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", version = "0.1.0" }
