[package]
name = "embassy-os-guess"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3.8", optional = true }
embassy-usb = "0.3.0"
log = { version = "0.4.22", optional = true }
